# nycatech-engine

./: .clang-format  .clocignore  .gitignore  CMakeLists.txt  meson.build
assets/: bundle.zst  robot.mtl  scene.fb  teapot.glb
engine/: CMakeLists.txt  base.h  cgltf.cc  cgltf.h  config.cc  config.h  ecs.cc  ecs.h  engine.cc  engine.h  gltf_loader.cc  material.cc  material.h  math.cc  mesh.cc  mesh.h  meson.build  package.cc  package.h  renderer.cc  renderer.h  resource_manager.cc  resource_manager.h  scene.cc  scene.h  shader.cc  shader.h  texture.cc  texture.h  tiny_obj_loader.h  transform.cc  transform.h
engine/renderer/: mesh.cc  mesh.h  meson.build  model.cc  model.h  renderer.cc  renderer.h  tiny_obj_loader.h
entrypoint/: CMakeLists.txt  meson.build
entrypoint/client/: CMakeLists.txt  main.cc  meson.build
entrypoint/scene_loader/: CMakeLists.txt  main.cc
entrypoint/test/: CMakeLists.txt  main.cc  meson.build
protos/: CMakeLists.txt  meson.build  scene.fbs  scene.proto
shaders/: camera_frag.glsl  camera_vert.glsl  model_frag.glsl  model_vert.glsl
